CC-26250: updated robot configuration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -487,6 +487,7 @@ jobs:
 
             - name: Install packages
               run: |
+                  sudo apt update
                   sudo apt-get install apache2-utils
                   sudo apt install awscli -q
                   python3 -m pip install --upgrade pip
@@ -538,6 +539,7 @@ jobs:
 
             - name: Install packages
               run: |
+                  sudo apt update
                   sudo apt-get install apache2-utils
                   sudo apt install awscli -q
                   python3 -m pip install --upgrade pip
