--- a/data/import/local/full_US.yml
+++ b/data/import/local/full_US.yml
@@ -295,9 +295,11 @@ actions:
     - data_entity: product-offer-stock
       source: data/import/common/common/marketplace/product_offer_stock.csv
 
-    #8. Click&Collect import
+    #9. Click&Collect import
     - data_entity: service-point
       source: data/import/common/common/service_point.csv
+    - data_entity: service-point-address
+      source: data/import/common/common/service_point_address.csv
     # Store relation
     - data_entity: service-point-store
       source: data/import/common/US/service_point_store.csv
