--- a/data/import/local/full_AT.yml
+++ b/data/import/local/full_AT.yml
@@ -269,3 +269,12 @@ actions:
       source: data/import/common/AT/merchant_store.csv
     - data_entity: merchant-product-offer-store
       source: data/import/common/AT/merchant_product_offer_store.csv
+
+    #9. Click&Collect import
+    - data_entity: service-point
+      source: data/import/common/common/service_point.csv
+    - data_entity: service-point-address
+      source: data/import/common/common/service_point_address.csv
+    # Store relation
+    - data_entity: service-point-store
+      source: data/import/common/AT/service_point_store.csv
