--- a/data/import/local/full_US.yml
+++ b/data/import/local/full_US.yml
@@ -303,6 +303,13 @@ actions:
     # Store relation
     - data_entity: service-point-store
       source: data/import/common/US/service_point_store.csv
+    # Shipment types
+    - data_entity: shipment-type
+      source: data/import/common/common/shipment_type.csv
+    - data_entity: shipment-type-store
+      source: data/import/common/US/shipment_type_store.csv
+    - data_entity: shipment-method-shipment-type
+      source: data/import/common/common/shipment_method_shipment_type.csv
 
     # Acl import
     - data_entity: acl-role
