--- a/data/import/local/full_EU.yml
+++ b/data/import/local/full_EU.yml
@@ -361,6 +361,10 @@ actions:
       source: data/import/common/common/service_point.csv
     - data_entity: service-point-address
       source: data/import/common/common/service_point_address.csv
+    - data_entity: service-type
+      source: data/import/common/common/service_type.csv
+    - data_entity: service-point-service
+      source: data/import/common/common/service_point_service.csv
     # Store relation
     - data_entity: service-point-store
       source: data/import/common/DE/service_point_store.csv
