Upgraded `spryker/acl-merchant-portal` to master version to fix failing tests

--- a/composer.json
+++ b/composer.json
@@ -189,7 +189,7 @@
         "spryker/acl-entity-dummy-product": "^0.2.0",
         "spryker/acl-entity-extension": "^1.0.0",
         "spryker/acl-extension": "^1.0.0",
-        "spryker/acl-merchant-portal": "^1.0.0",
+        "spryker/acl-merchant-portal": "dev-master as 1.11.0",
         "spryker/acl-merchant-portal-extension": "^1.0.0",
         "spryker/agent": "^1.5.0",
         "spryker/agent-auth-rest-api": "^1.0.0",
