--- a/data/import/production/full_EU.yml
+++ b/data/import/production/full_EU.yml
@@ -33,6 +33,10 @@ actions:
       source: data/import/common/common/tax.csv
     - data_entity: shipment
       source: data/import/common/common/shipment.csv
+    - data_entity: shipment-type
+      source: data/import/common/common/shipment_type.csv
+    - data_entity: shipment-method-shipment-type
+      source: data/import/common/common/shipment_method_shipment_type.csv
     - data_entity: shipment-price
       source: data/import/common/DE/shipment_price.csv
     - data_entity: shipment-price
@@ -62,6 +66,10 @@ actions:
       source: data/import/common/DE/payment_method_store.csv
     - data_entity: payment-method-store
       source: data/import/common/AT/payment_method_store.csv
+    - data_entity: shipment-type-store
+      source: data/import/common/DE/shipment_type_store.csv
+    - data_entity: shipment-type-store
+      source: data/import/common/AT/shipment_type_store.csv
 
     #2. Catalog Setup data import
     - data_entity: category-template
