--- a/data/import/production/full_US.yml
+++ b/data/import/production/full_US.yml
@@ -25,6 +25,10 @@ actions:
       source: data/import/common/common/tax.csv
     - data_entity: shipment
       source: data/import/common/common/shipment.csv
+    - data_entity: shipment-type
+      source: data/import/common/common/shipment_type.csv
+    - data_entity: shipment-method-shipment-type
+      source: data/import/common/common/shipment_method_shipment_type.csv
     - data_entity: shipment-price
       source: data/import/common/US/shipment_price.csv
     - data_entity: sales-order-threshold
@@ -44,6 +48,8 @@ actions:
       source: data/import/common/US/warehouse_store.csv
     - data_entity: payment-method-store
       source: data/import/common/US/payment_method_store.csv
+    - data_entity: shipment-type-store
+      source: data/import/common/US/shipment_type_store.csv
 
     #2. Catalog Setup data import
     - data_entity: category-template
