--- a/deploy.ci.acceptance.mariadb.dynamic-store.yml
+++ b/deploy.ci.acceptance.mariadb.dynamic-store.yml
@@ -15,11 +15,11 @@ image:
         SPRYKER_YVES_HOST_US: yves.us.spryker.local
         SPRYKER_DYNAMIC_STORE_MODE: true
     node:
-        version: 16
-        npm: 8
+        version: 18
+        npm: 9
 
 composer:
-    mode: "--no-dev --quiet"
+    mode: '--no-dev --quiet'
     autoload: --classmap-authoritative
 
 regions:
