--- a/deploy.ci.api.mariadb.dynamic-store.yml
+++ b/deploy.ci.api.mariadb.dynamic-store.yml
@@ -16,7 +16,7 @@ image:
         SPRYKER_DYNAMIC_STORE_MODE: true
 
 composer:
-    mode: "--no-dev --quiet"
+    mode: '--no-dev --quiet'
     autoload: --classmap-authoritative
 
 regions:
