--- a/deploy.ci.api.mariadb.yml
+++ b/deploy.ci.api.mariadb.yml
@@ -18,7 +18,7 @@ image:
         SPRYKER_YVES_HOST_AT: yves.at.spryker.local
 
 composer:
-    mode: "--no-dev --quiet"
+    mode: '--no-dev --quiet'
     autoload: --classmap-authoritative
 
 regions:
