--- a/deploy.ci.functional.mariadb.dynamic-store.yml
+++ b/deploy.ci.functional.mariadb.dynamic-store.yml
@@ -17,7 +17,7 @@ image:
         SPRYKER_YVES_HOST_US: yves.us.spryker.local
 
 composer:
-    mode: "--no-dev --quiet"
+    mode: '--no-dev --quiet'
     autoload: --classmap-authoritative
 
 regions:
