--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
         "postinstall": "npm run mp:update:paths"
     },
     "engines": {
-        "node": ">=16.0.0",
-        "npm": ">=8.0.0"
+        "node": ">=18.0.0",
+        "npm": ">=9.0.0"
     },
     "dependencies": {
         "@angular/animations": "~15.0.3",
@@ -80,14 +80,13 @@
         "@spryker/frontend-config.eslint": "~0.1.0",
         "@spryker/frontend-config.prettier": "~0.0.5",
         "@spryker/frontend-config.stylelint": "~0.0.5",
-        "@spryker/oryx-for-zed": "~2.13.0",
-        "@spryker/sass-resources-loader": "~2.0.1-spryker.0.1.0",
+        "@spryker/oryx-for-zed": "~3.0.0",
         "@types/jest": "~28.1.1",
         "@types/node": "~14.14.33",
         "@types/webpack": "~5.28.0",
         "@typescript-eslint/eslint-plugin": "~5.54.0",
         "@typescript-eslint/parser": "~5.54.0",
-        "autoprefixer": "~9.8.8",
+        "autoprefixer": "~10.4.14",
         "babel-loader": "~8.2.5",
         "clean-webpack-plugin": "~4.0.0",
         "commander": "~4.0.1",
@@ -104,12 +103,13 @@
         "npm-run-all": "~4.1.5",
         "nx": "~15.0.7",
         "optimize-css-assets-webpack-plugin": "~6.0.1",
-        "postcss": "~8.4.20",
-        "postcss-loader": "~3.0.0",
+        "postcss": "~8.4.23",
+        "postcss-loader": "~7.3.0",
         "prettier": "~2.8.4",
         "rimraf": "~3.0.2",
         "sass": "~1.51.0",
         "sass-loader": "~10.2.0",
+        "sass-resources-loader": "~2.2.5",
         "stylelint": "~13.13.1",
         "terser-webpack-plugin": "~5.3.6",
         "ts-jest": "~28.0.8",
