--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
             - uses: actions/setup-node@v3
               with:
-                  node-version: '18'
+                  node-version: '18.x'
 
             - name: NPM cache
               uses: actions/cache@v3
