--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: '18'
+                  cache: 'npm'
 
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
