--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "@angular/language-service": "~15.0.3",
         "@babel/plugin-proposal-class-properties": "~7.17.12",
         "@babel/plugin-transform-runtime": "~7.17.12",
+        "@babel/preset-env": "~7.20.2",
         "@babel/preset-typescript": "~7.17.12",
         "@jsdevtools/file-path-filter": "~3.0.2",
         "@nrwl/cli": "~15.0.7",
@@ -103,7 +104,7 @@
         "npm-run-all": "~4.1.5",
         "nx": "~15.0.7",
         "optimize-css-assets-webpack-plugin": "~6.0.1",
-        "postcss": "~8.4.23",
+        "postcss": "~8.4.24",
         "postcss-loader": "~7.3.0",
         "prettier": "~2.8.4",
         "rimraf": "~3.0.2",
