CC-26550 Services and ServiceTypes BAPI (#7875)
CC-26550 Services and ServiceTypes BAPI

--- a/data/import/local/full_AT.yml
+++ b/data/import/local/full_AT.yml
@@ -283,8 +283,8 @@ actions:
       source: data/import/common/common/service_point_address.csv
     - data_entity: service-type
       source: data/import/common/common/service_type.csv
-    - data_entity: service-point-service
-      source: data/import/common/common/service_point_service.csv
+    - data_entity: service
+      source: data/import/common/common/service.csv
     # Store relation
     - data_entity: service-point-store
       source: data/import/common/AT/service_point_store.csv
