--- a/data/import/local/full_DE.yml
+++ b/data/import/local/full_DE.yml
@@ -284,8 +284,8 @@ actions:
       source: data/import/common/common/service_point_address.csv
     - data_entity: service-type
       source: data/import/common/common/service_type.csv
-    - data_entity: service-point-service
-      source: data/import/common/common/service_point_service.csv
+    - data_entity: service
+      source: data/import/common/common/service.csv
     # Store relation
     - data_entity: service-point-store
       source: data/import/common/DE/service_point_store.csv
