--- a/data/import/local/full_US.yml
+++ b/data/import/local/full_US.yml
@@ -301,7 +301,7 @@ actions:
     - data_entity: product-offer-stock
       source: data/import/common/common/marketplace/product_offer_stock.csv
 
-    #8. Click&Collect import
+    #9. Click&Collect import
     - data_entity: service-point
       source: data/import/common/common/service_point.csv
     - data_entity: service-point-address
@@ -310,6 +310,8 @@ actions:
       source: data/import/common/common/service_type.csv
     - data_entity: service
       source: data/import/common/common/service.csv
+    - data_entity: shipment-type-service-type
+      source: data/import/common/common/shipment_type_service_type.csv
     # Store relation
     - data_entity: service-point-store
       source: data/import/common/US/service_point_store.csv
