CC-26566 Introduced product offer delivery type management. (#7825)
CC-26566 Introduced product offer delivery type management.

--- a/data/import/local/full_US.yml
+++ b/data/import/local/full_US.yml
@@ -289,6 +289,8 @@ actions:
       source: data/import/common/common/marketplace/merchant_stock.csv
     - data_entity: merchant-product-approval-status-default
       source: data/import/common/common/marketplace/merchant_product_approval_status_default.csv
+    - data_entity: product-offer-shipment-type
+      source: data/import/common/common/product_offer_shipment_type.csv
     # Store relation
     - data_entity: merchant-store
       source: data/import/common/US/merchant_store.csv
