--- a/data/import/local/full_AT.yml
+++ b/data/import/local/full_AT.yml
@@ -289,6 +289,8 @@ actions:
       source: data/import/common/common/service.csv
     - data_entity: shipment-type-service-type
       source: data/import/common/common/shipment_type_service_type.csv
+    - data_entity: product-offer-service
+      source: data/import/common/common/marketplace/product_offer_service.csv
     # Store relation
     - data_entity: service-point-store
       source: data/import/common/AT/service_point_store.csv
