--- a/deploy.spryker-sns.yml
+++ b/deploy.spryker-sns.yml
@@ -40,7 +40,7 @@ x-frontend-auth: &frontend-auth
 namespace: spryker-cloud
 tag: '1.0'
 
-environment: docker
+environment: docker.dev
 image:
     tag: spryker/php:8.1
     environment:
@@ -62,6 +62,10 @@ image:
         enabled-extensions:
             - blackfire
             - newrelic
+        ini:
+            'opcache.revalidate_freq': 0
+            'opcache.enable_cli': 0
+            'opcache.enable': 0
     node:
         version: 18
         npm: 9
