--- a/deploy.ci.api.mariadb.yml
+++ b/deploy.ci.api.mariadb.yml
@@ -6,12 +6,7 @@ tag: '1.0'
 environment: docker.ci
 pipeline: docker.ci.api
 image:
-    tag: spryker/php:7.4
-    php:
-        ini:
-            'pcre.jit': 0
-            'opcache.revalidate_freq': 0
-            'opcache.validate_timestamps': 1
+    tag: spryker/php:8.1
     environment:
         SPRYKER_PRODUCT_CONFIGURATOR_HOST: date-time-configurator-example.spryker.local
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
@@ -23,7 +18,7 @@ image:
         SPRYKER_YVES_HOST_AT: yves.at.spryker.local
 
 composer:
-    mode: --no-dev --ignore-platform-reqs
+    mode: '--no-dev --quiet'
     autoload: --classmap-authoritative
 
 regions:
