SDK-2691: Enabled evaluator. Renamed CI job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
     validation:
-        name: "CS, ArchSniffer, PHPStan, Security"
+        name: "CS, ArchSniffer, PHPStan, Evaluator"
         runs-on: ubuntu-20.04
         strategy:
             fail-fast: false
