--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "ext-redis": "*",
         "spryker-eco/loggly": "^0.1.0",
         "spryker-eco/payone": "^4.0.0",
+        "spryker-eco/unzer-gui": "^1.0",
+        "spryker-eco/unzer-rest-api": "^0.1.3",
         "spryker-shop/agent-page": "^1.10.0",
         "spryker-shop/agent-widget": "^1.3.3",
         "spryker-shop/asset-widget": "^1.0.0",
