CC-29493 Added the robotframework-suite-tests repository to dependencies (#7929)
CC-29493 Added the robotframework-suite-tests repository to dependencies

--- a/composer.json
+++ b/composer.json
@@ -116,6 +116,7 @@
         "spryker/development-core": "dev-master",
         "spryker/code-sniffer": "dev-master",
         "spryker/git-hook": "dev-master",
+        "spryker/robotframework-suite-tests": "dev-master",
         "pdepend/pdepend": "dev-master as 2.11.0",
         "phpmd/phpmd": "^2.0.0",
         "composer/package-versions-deprecated": "^1.8.0",
@@ -213,6 +214,10 @@
         {
             "type": "git",
             "url": "git@github.com:spryker/development-core.git"
+        },
+        {
+            "type": "git",
+            "url": "git@github.com:spryker/robotframework-suite-tests.git"
         }
     ],
     "scripts": {
