SDK-2600: Profiler module updates (#7931)
SDK-2600 Profiler Toolbar available by default in demoshops and easy toggable

--- a/composer.json
+++ b/composer.json
@@ -149,7 +149,8 @@
         "spryker-sdk/load-testing": "dev-master",
         "codeception/c3": "^2.6",
         "spryker-sdk/async-api": "dev-master",
-        "spryker-sdk/evaluator": "dev-master"
+        "spryker-sdk/evaluator": "dev-master",
+        "spryker/profiler": "dev-master"
     },
     "autoload": {
         "psr-4": {
