--- a/data/import/production/full_DE.yml
+++ b/data/import/production/full_DE.yml
@@ -4,9 +4,17 @@ version: 0
 actions:
     #1. Commerce Setup data import
     - data_entity: store
-    # Cannot have a source because we use store.php
+      source: data/import/common/DE/store.csv
     - data_entity: currency
       source: data/import/common/common/currency.csv
+    - data_entity: currency-store
+      source: data/import/common/DE/currency_store.csv
+    - data_entity: country-store
+      source: data/import/common/DE/country_store.csv
+    - data_entity: locale-store
+      source: data/import/common/DE/locale_store.csv
+    - data_entity: default-locale-store
+      source: data/import/common/DE/default_locale_store.csv
     - data_entity: order-source
       source: data/import/common/common/order_source.csv
     - data_entity: customer
