--- a/config/install/ci.code-generate.yml
+++ b/config/install/ci.code-generate.yml
@@ -12,9 +12,6 @@ sections:
         rest-api-generate-documentation:
             command: 'vendor/bin/console rest-api:generate:documentation'
 
-        api-generate-documentation:
-            command: 'vendor/bin/glue api:generate:documentation'
-
         generate-scope-collection-file:
             command: 'vendor/bin/console oauth:scope-collection-file:generate'
 
@@ -36,9 +33,6 @@ sections:
 
         rest-request-validation-cache-warmup:
             command: 'vendor/bin/console rest-api:build-request-validation-cache'
-
-        controller-cache-warmup:
-            command: 'vendor/bin/glue glue-api:controller:cache:warm-up'
 
         generate-page-source-map:
             command: 'vendor/bin/console search:setup:source-map'
@@ -64,6 +58,22 @@ sections:
 
         generate-entity-transfer:
             command: 'vendor/bin/console transfer:entity:generate'
+
+        propel-migrate:
+            command: 'vendor/bin/console propel:migrate'
+
+        propel-migration-cleanup:
+            command: 'vendor/bin/console propel:migration:delete'
+
+        init-database:
+            command: 'vendor/bin/console setup:init-db'
+
+    setup-glue:
+        controller-cache-warmup:
+            command: 'vendor/bin/glue glue-api:controller:cache:warm-up'
+
+        api-generate-documentation:
+            command: 'vendor/bin/glue api:generate:documentation'
 
     setup-test:
         codeception-build:
