--- a/config/install/ci.yml
+++ b/config/install/ci.yml
@@ -11,8 +11,7 @@ sections:
 
         rest-api-generate-documentation:
             command: 'vendor/bin/console rest-api:generate:documentation'
-        api-generate-documentation:
-            command: 'vendor/bin/glue api:generate:documentation'
+
         generate-scope-collection-file:
             command: 'vendor/bin/console oauth:scope-collection-file:generate'
 
@@ -34,9 +33,6 @@ sections:
 
         rest-request-validation-cache-warmup:
             command: 'vendor/bin/console rest-api:build-request-validation-cache'
-
-        controller-cache-warmup:
-            command: 'vendor/bin/glue glue-api:controller:cache:warm-up'
 
         generate-page-source-map:
             command: 'vendor/bin/console search:setup:source-map'
@@ -91,6 +87,13 @@ sections:
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update'
+
+    setup-glue:
+        controller-cache-warmup:
+            command: 'vendor/bin/glue glue-api:controller:cache:warm-up'
+
+        api-generate-documentation:
+            command: 'vendor/bin/glue api:generate:documentation'
 
     queue-demodata:
         run-worker:
