--- a/config/install/docker.yml
+++ b/config/install/docker.yml
@@ -27,9 +27,6 @@ sections:
         rest-request-validation-cache-warmup:
             command: 'vendor/bin/console rest-api:build-request-validation-cache'
 
-        controller-cache-warmup:
-            command: 'vendor/bin/glue glue-api:controller:cache:warm-up'
-
         propel-copy-schema:
             command: 'vendor/bin/console propel:schema:copy'
 
@@ -65,9 +62,6 @@ sections:
 
         rest-api-generate-documentation:
             command: 'vendor/bin/console rest-api:generate:documentation'
-
-        api-generate-documentation:
-            command: 'vendor/bin/glue api:generate:documentation'
 
     build-static:
         project-install-dependencies:
@@ -162,3 +156,10 @@ sections:
 
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update'
+
+    setup-glue:
+        controller-cache-warmup:
+            command: 'vendor/bin/glue glue-api:controller:cache:warm-up'
+
+        api-generate-documentation:
+            command: 'vendor/bin/glue api:generate:documentation'
