--- a/.travis.yml
+++ b/.travis.yml
@@ -230,6 +230,7 @@ _DOCKER_BUILD_TEMPLATE: &DOCKER_BUILD_TEMPLATE
             - backend-gateway.de.spryker.local
             - backoffice.de.spryker.local
             - glue.de.spryker.local
+            - glue-backend.de.spryker.local
             - yves.de.spryker.local
             - mp.de.spryker.local
         apt:
@@ -1047,6 +1048,7 @@ jobs:
               - git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
               - cd robotframework-tests
               - robot -v env:api_suite --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite.glue .
+              - robot -v env:api_suite --exclude skip-due-to-issueORskip-due-to-refactoring -d results tests/api/suite/bapi
           after_script:
               - *AWS_SYNC_CONFIG
               - |
@@ -1080,6 +1082,7 @@ jobs:
               - git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
               - cd robotframework-tests
               - robot -v env:api_suite -v db_engine:psycopg2 --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite.glue .
+              - robot -v env:api_suite -v db_engine:psycopg2 --exclude skip-due-to-issueORskip-due-to-refactoring -d results tests/api/suite/bapi
           after_script:
               - *AWS_SYNC_CONFIG
               - |
