FRW-2376 Fixed overite robot logs by bapi results

--- a/.travis.yml
+++ b/.travis.yml
@@ -1048,7 +1048,7 @@ jobs:
               - git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
               - cd robotframework-tests
               - robot -v env:api_suite --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite.glue .
-              - robot -v env:api_suite --exclude skip-due-to-issueORskip-due-to-refactoring -d results tests/api/suite/bapi
+              - robot -v env:api_suite --exclude skip-due-to-issueORskip-due-to-refactoring -d results/bapi tests/api/suite/bapi
           after_script:
               - *AWS_SYNC_CONFIG
               - |
@@ -1082,7 +1082,7 @@ jobs:
               - git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
               - cd robotframework-tests
               - robot -v env:api_suite -v db_engine:psycopg2 --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite.glue .
-              - robot -v env:api_suite -v db_engine:psycopg2 --exclude skip-due-to-issueORskip-due-to-refactoring -d results tests/api/suite/bapi
+              - robot -v env:api_suite -v db_engine:psycopg2 --exclude skip-due-to-issueORskip-due-to-refactoring -d results/bapi tests/api/suite/bapi
           after_script:
               - *AWS_SYNC_CONFIG
               - |
