--- a/composer.json
+++ b/composer.json
@@ -148,8 +148,8 @@
         "spryker/docker-chromedriver": "dev-master",
         "spryker-sdk/load-testing": "dev-master",
         "codeception/c3": "^2.6",
-        "spryker-sdk/async-api": "dev-master",
         "spryker-sdk/evaluator": "dev-master",
+        "spryker-sdk/async-api": "^0.3.1",
         "spryker/profiler": "dev-master"
     },
     "autoload": {
