PBC-1947 Added changed that was missing on nonsplit=>suite merge.

--- a/codeception.functional.yml
+++ b/codeception.functional.yml
@@ -31,3 +31,6 @@ extensions:
         \SprykerTest\Shared\Testify\Helper\SuiteFilterHelper:
             exclusive:
                 - Api
+                - AsyncApi
+                - Glue
+                - Presentation
