FRW-1610 Dynamic Store API coverage. (#7932)
FRW-1610 Dynamic Store API coverage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -233,6 +233,7 @@ _DOCKER_BUILD_TEMPLATE: &DOCKER_BUILD_TEMPLATE
             - glue-backend.de.spryker.local
             - yves.de.spryker.local
             - mp.de.spryker.local
+            - glue-storefront.de.spryker.local
         apt:
             packages:
                 - redis-tools
