CC-29739 Added the commerce-k6-performance-tests repository to dependencies. (#8011)
CC-29739 Added the commerce-k6-performance-tests repository to dependencies.

--- a/composer.json
+++ b/composer.json
@@ -150,7 +150,8 @@
         "codeception/c3": "^2.6",
         "spryker-sdk/evaluator": "dev-master",
         "spryker-sdk/async-api": "^0.3.1",
-        "spryker/profiler": "dev-master"
+        "spryker/profiler": "dev-master",
+        "spryker/commerce-k6-performance-tests": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -219,6 +220,10 @@
         {
             "type": "git",
             "url": "git@github.com:spryker/robotframework-suite-tests.git"
+        },
+        {
+            "type": "git",
+            "url": "git@github.com:spryker/commerce-k6-performance-tests.git"
         }
     ],
     "scripts": {
