--- a/deploy.ci.acceptance.yml
+++ b/deploy.ci.acceptance.yml
@@ -150,7 +150,7 @@ services:
         engine: redis
     search:
         engine: elastic
-        version: 7.6
+        version: '7.10'
     scheduler:
         engine: jenkins
         version: '2.324'
