--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
         "spryker-eco/authorization-picking-app-backend-api": "^0.2.0",
         "spryker-eco/loggly": "^0.1.0",
         "spryker-eco/payone": "^4.0.0",
-        "spryker-sdk/evaluator": "^0.1.4",
         "spryker-shop/agent-page": "^1.10.0",
         "spryker-shop/agent-page-extension": "^1.0.0",
         "spryker-shop/agent-widget": "^1.3.3",
@@ -1177,6 +1176,7 @@
         "spryker-sdk/benchmark": "^0.2.0",
         "spryker-sdk/codeception-phantoman": "^0.1.0",
         "spryker-sdk/composer-constrainer": "^0.2.0",
+        "spryker-sdk/evaluator": "0.1.4",
         "spryker-sdk/load-testing": "^0.1.0",
         "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/spryk": "^0.4.0",
