Fixed vendor/bin/console code:phpstan -m Spryker.MessageBrokerAws after auto-update of async-aws/core and async-aws/sns packages

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
         "ext-pgsql": "*",
         "ext-readline": "*",
         "ext-redis": "*",
-        "async-aws/core": "^1.10.0",
-        "async-aws/sns": "^1.0.0",
+        "async-aws/core": "~1.19.0",
+        "async-aws/sns": "~1.4.1",
         "async-aws/sqs": "^1.0.0",
         "aws/aws-sdk-php": "^3.247.0",
         "cebe/php-openapi": "^1.6",
