CC-29896 Introduced Docker container for Robot tests. (#8133)
CC-29896 Introduced Docker container for Robot tests.

--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -306,3 +306,7 @@ docker:
         mutagen:
             platforms:
                 - macos
+
+    compose:
+        yamls:
+            - .robot/docker-compose.robot.yml
