--- a/.travis.yml
+++ b/.travis.yml
@@ -1029,30 +1029,25 @@ jobs:
         - name: Docker / Alpine / PHP 8.0 / MariaDB / Robot
           <<: *DOCKER_BUILD_TEMPLATE
           stage: Test
-          language: python
-          python: 3.9
+          language: php
+          php: '8.0'
           env:
               - PROGRESS_TYPE=plain
               - SPRYKER_PLATFORM_IMAGE=spryker/php:8.0
               - TRAVIS=1
           script:
+              - phpenv config-rm xdebug.ini
+              - echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+              - *COMPOSER_INSTALL
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
               - travis_wait 35 docker/sdk up -t
               - travis_wait 35 docker/sdk testing console queue:worker:start --stop-when-empty
-              - python3 -m pip install --upgrade pip
-              - python3 -m pip install -U robotframework
-              - python3 -m pip install -U robotframework-requests
-              - python3 -m pip install -U robotframework-jsonlibrary
-              - python3 -m pip install -U robotframework-databaselibrary
-              - python3 -m pip install PyMySQL
               - sudo apt install awscli -q
-              - git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
-              - cd robotframework-tests
-              - robot -v env:api_suite --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite .
+              - docker/sdk exec robot-framework robot -v env:api_suite -v docker:True --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite .
           after_script:
               - *AWS_SYNC_CONFIG
               - |
-                  AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET aws s3 cp $TRAVIS_BUILD_DIR/robotframework-tests/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit-robot-api-ci/$TRAVIS_BUILD_NUMBER/PHP8.0MariaDBRobot/ \
+                  AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET aws s3 cp $TRAVIS_BUILD_DIR/.robot/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit-robot-api-ci/$TRAVIS_BUILD_NUMBER/PHP8.0MariaDBRobot/ \
                     --recursive \
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
           after_failure:
@@ -1062,30 +1057,25 @@ jobs:
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Robot
           <<: *DOCKER_BUILD_TEMPLATE
           stage: Test
-          language: python
-          python: 3.9
+          language: php
+          php: '8.1.0'
           env:
               - PROGRESS_TYPE=plain
               - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
+              - phpenv config-rm xdebug.ini
+              - echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+              - *COMPOSER_INSTALL
               - docker/sdk boot -v deploy.ci.acceptance.yml
               - travis_wait 35 docker/sdk up -t -v
               - travis_wait 35 docker/sdk testing console queue:worker:start --stop-when-empty
-              - python3 -m pip install --upgrade pip
-              - python3 -m pip install -U robotframework
-              - python3 -m pip install -U robotframework-requests
-              - python3 -m pip install -U robotframework-jsonlibrary
-              - python3 -m pip install -U robotframework-databaselibrary
-              - python3 -m pip install psycopg2-binary
               - sudo apt install awscli -q
-              - git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
-              - cd robotframework-tests
-              - robot -v env:api_suite -v db_engine:psycopg2 --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite .
+              - docker/sdk exec robot-framework robot -v env:api_suite -v db_engine:psycopg2 -v docker:True --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite .
           after_script:
               - *AWS_SYNC_CONFIG
               - |
-                  AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET aws s3 cp $TRAVIS_BUILD_DIR/robotframework-tests/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit-robot-api-ci/$TRAVIS_BUILD_NUMBER/PHP8.1PostgreSQLRobot/ \
+                  AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET aws s3 cp $TRAVIS_BUILD_DIR/.robot/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit-robot-api-ci/$TRAVIS_BUILD_NUMBER/PHP8.1PostgreSQLRobot/ \
                     --recursive \
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
           after_failure:
