--- a/tests/PyzTest/Zed/AppCatalogGui/codeception.yml
+++ b/tests/PyzTest/Zed/AppCatalogGui/codeception.yml
@@ -30,3 +30,7 @@ suites:
                       host: 0.0.0.0
                       restart: false
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
+                - \SprykerTest\Shared\Propel\Helper\ConnectionHelper
+                - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
