Check CI propel

--- a/composer.json
+++ b/composer.json
@@ -910,7 +910,7 @@
         "spryker/products-rest-api": "^2.14.0",
         "spryker/products-rest-api-extension": "^1.0.0",
         "spryker/propel": "^3.31.2",
-        "spryker/propel-orm": "^1.0.0",
+        "spryker/propel-orm": "dev-backport/1.18.1 as 1.18.1",
         "spryker/propel-orm-extension": "^1.0.0",
         "spryker/propel-query-builder": "^0.3.0",
         "spryker/propel-replication-cache": "^1.0.0",
