--- a/composer.json
+++ b/composer.json
@@ -911,6 +911,7 @@
         "spryker/products-rest-api-extension": "^1.0.0",
         "spryker/propel": "^3.31.2",
         "spryker/propel-orm": "dev-backport/1.18.1 as 1.18.1",
+        "propel/propel": "2.0.0-beta2",
         "spryker/propel-orm-extension": "^1.0.0",
         "spryker/propel-query-builder": "^0.3.0",
         "spryker/propel-replication-cache": "^1.0.0",
