--- a/deploy.lszemis-staging.yml
+++ b/deploy.lszemis-staging.yml
@@ -40,7 +40,7 @@ x-frontend-auth: &frontend-auth
 namespace: lszemis-staging # INIT_IMAGE_PREFIX
 tag: '1.0'
 
-environment: docker
+environment: docker.dev
 image:
     tag: spryker/php:8.1
     environment:
