CC-30822 Adjust CI configuration

--- a/composer.json
+++ b/composer.json
@@ -1199,7 +1199,7 @@
         "spryker/code-sniffer": "dev-master",
         "spryker/development": "^3.30.1",
         "spryker/docker-chromedriver": "dev-master",
-        "spryker/robotframework-suite-tests": "dev-master",
+        "spryker/robotframework-suite-tests": "dev-bugfix/cc-30882-fix-failing-robot-test-ci",
         "spryker/silex": "^2.0.0",
         "spryker/testify": "^3.40.0",
         "spryker/web-profiler": "^1.5",
