CC-30636 Introduced relationship between shipment-types and service-types resources. (#8154)
CC-30636 Introduced relationship between shipment-types and service-types resources

--- a/tests/PyzTest/Glue/ShipmentTypes/codeception.yml
+++ b/tests/PyzTest/Glue/ShipmentTypes/codeception.yml
@@ -31,6 +31,8 @@ suites:
                 - \SprykerTest\Shared\ShipmentType\Helper\ShipmentTypeHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Shared\ServicePoint\Helper\ServicePointHelper
+                - \SprykerTest\Shared\ShipmentTypeServicePoint\Helper\ShipmentTypeServicePointHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
