PBC-1833: TaxApp calculation (Master) (#8205)
PBC-1833 Vertex Tax Calculation

--- a/config/install/production.yml
+++ b/config/install/production.yml
@@ -47,3 +47,8 @@ sections:
         scheduler-setup:
             command: 'vendor/bin/console scheduler:setup -vvv --no-ansi'
             stores: true
+
+    data-import:
+        glossary:
+            command: 'vendor/bin/console data:import:glossary -vvv --no-ansi'
+            stores: true
