--- a/deploy.spryker-dsfrw.yml
+++ b/deploy.spryker-dsfrw.yml
@@ -142,6 +142,16 @@ groups:
                     backend-api.eu.dstore.frw.cloud.spryker.toys:
                         region: EU
                         entry-point: BackendApi
+            glue_storefront_eu:
+                application: glue-storefront
+                endpoints:
+                    glue-storefront.eu.dstore.frw.cloud.spryker.toys:
+                        region: EU
+            glue_backend_eu:
+                application: glue-backend
+                endpoints:
+                    glue-backend.eu.dstore.frw.cloud.spryker.toys:
+                        region: EU
 
 services:
     database:
