CC-30854 Replace shipping address with service point address for pickupable shipments in Glue. (#8320)
CC-30854 Replace shipping address with service point address for pickupable shipments in Glue.

--- a/tests/PyzTest/Glue/Checkout/codeception.yml
+++ b/tests/PyzTest/Glue/Checkout/codeception.yml
@@ -41,6 +41,7 @@ suites:
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
                 - \SprykerTest\Shared\ServicePoint\Helper\ServicePointHelper
                 - \SprykerTest\Shared\ShipmentType\Helper\ShipmentTypeHelper
+                - \SprykerTest\Zed\Country\Helper\CountryDataHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
